--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shop_android">
-        <activity android:name=".home">
+        <activity android:name=".starup">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
